--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@
 
     .intro-text {
       text-align: left;
-      padding: 18px 0;
+      padding: 17px 0;
     }
 
     h1 {
@@ -172,7 +172,8 @@
     }
 
     .intro-text p {
-      margin-bottom: 10px;
+      margin-inline: 0;
+      margin-bottom: 11px;
       max-width: 435px;
     }
 
@@ -217,6 +218,10 @@
     .testimonial-item:nth-child(3) {
       margin-top: 32px;
       margin-bottom: 0;
+    }
+
+    .testimonial-item h2 {
+      padding-top: 0;
     }
   }
 
