--- a/style.css
+++ b/style.css
@@ -252,4 +252,8 @@
       padding-top: 19px;
       padding-bottom: 20px;
     }
+
+    .rating:first-child p {
+      padding-left: 0;;
+    }
   }
